RESOLVED FIXED166921
Iterating over URLSearchParams does not work
https://bugs.webkit.org/show_bug.cgi?id=166921
Summary Iterating over URLSearchParams does not work
Anne van Kesteren
Reported 2017-01-11 00:58:05 PST
Running https://github.com/w3c/web-platform-tests/pull/4517 in Safari TP results in "item of sp is not a function". (I filed the formData() issue there separately.)
Attachments
Patch (6.01 KB, patch)
2017-01-11 09:41 PST, Chris Dumez
no flags
Patch (6.21 KB, patch)
2017-01-11 09:53 PST, Chris Dumez
no flags
Patch (6.28 KB, patch)
2017-01-11 09:56 PST, Chris Dumez
no flags
Patch (7.91 KB, patch)
2017-01-11 10:41 PST, Chris Dumez
no flags
Chris Dumez
Comment 1 2017-01-11 08:46:57 PST
Thanks for letting us know. I'll take a look soon.
Chris Dumez
Comment 2 2017-01-11 09:41:55 PST
Chris Dumez
Comment 3 2017-01-11 09:53:02 PST
Radar WebKit Bug Importer
Comment 4 2017-01-11 09:56:13 PST
Chris Dumez
Comment 5 2017-01-11 09:56:44 PST
Chris Dumez
Comment 6 2017-01-11 10:41:31 PST
WebKit Commit Bot
Comment 7 2017-01-11 11:19:29 PST
Comment on attachment 298598 [details] Patch Clearing flags on attachment: 298598 Committed r210593: <http://trac.webkit.org/changeset/210593>
WebKit Commit Bot
Comment 8 2017-01-11 11:19:36 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.