Iterating over URLSearchParams does not work https://bugs.webkit.org/show_bug.cgi?id=166921 <rdar://problem/29970907>

Reviewed by Alex Christensen.

LayoutTests/imported/w3c:

Rebaseline W3C test now that more checks are passing.

* web-platform-tests/url/urlsearchparams-foreach-expected.txt:

Source/WebCore:

Make URLSearchParams iterable, as per:
- https://url.spec.whatwg.org/#urlsearchparams

Test: fast/dom/DOMURL/searchparams-iterable.html

* html/URLSearchParams.cpp:
(WebCore::URLSearchParams::Iterator::next):
(WebCore::URLSearchParams::Iterator::Iterator):
* html/URLSearchParams.h:
(WebCore::URLSearchParams::createIterator):
* html/URLSearchParams.idl:

LayoutTests:

Add layout test coverage.

* fast/dom/DOMURL/searchparams-iterable-expected.txt: Added.
* fast/dom/DOMURL/searchparams-iterable.html: Added.


Canonical link: https://commits.webkit.org/184037@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@210593 268f45cc-cd09-0410-ab3c-d52691b4dbfc